配置开发服务

--- a/day03/day3-4/src/less/index.less
+++ b/day03/day3-4/src/less/index.less
@@ -1,4 +1,6 @@
 @size: 24px;
 body {
     font-size: @size;
-}
+    color: aqua;
+    background: url(../assets/s_01\(1\).jpg) no-repeat center;
+};
